[tool.poetry]
name = "volctrl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
readme = "README.md"
packages = [
  { include = "volctrl.py" },
]

[tool.poetry.scripts]
volctrl = 'volctrl:run'

[tool.poetry.dependencies]
python = "^3.11"
pyalsaaudio = "^0.11.0"
evdev = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
